Made DataFrame with all feature's seqence, end, and start base

--- a/notebooks/01_analyzing_DNAstar_results.ipynb
+++ b/notebooks/01_analyzing_DNAstar_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "24f7b361",
+   "id": "229305fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cfca68fb",
+   "id": "4f16ebcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b9e2df2c",
+   "id": "487da584",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2bbfd4",
+   "id": "35ca7427",
    "metadata": {},
    "source": [
     "Let's do an example with feature 26."
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "767f4ad7",
+   "id": "22bee199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8426a7cd",
+   "id": "66f3dc77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5d414a38",
+   "id": "0aafc340",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0be8365",
+   "id": "700cbcf7",
    "metadata": {},
    "source": [
     "Now that we know it works, let's loop through all features to get their respective sequences."
@@ -105,45 +105,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "b7a70e2a",
+   "execution_count": 125,
+   "id": "868c27e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gbk_seq=pd.DataFrame([],columns=(['sequence','start','end'])) #want df with seq,start,and end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "e4a155d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "seq_list=[]\n",
+    "start_list=[]\n",
+    "end_list=[]\n",
     "for i in range(0,len(gb_record.features)):\n",
     "    gb_feature = gb_record.features[i]\n",
     "    start=gb_feature.location.nofuzzy_start #first base pair in seq for feature\n",
     "    end=gb_feature.location.nofuzzy_end #last base pair in seq for feature\n",
     "    seq=gb_record.seq[start:end].reverse_complement()\n",
-    "    seq_list.append(seq) #full list of all sequences for every feature"
+    "    seq_list.append(seq) #full list of all sequences for every feature\n",
+    "    start_list.append(start) #full list of all sequences for every feature\n",
+    "    end_list.append(end) #full list of all sequences for every feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "afd90476",
+   "execution_count": 139,
+   "id": "a4d1699c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3796"
+       "3795"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(seq_list)"
+    "new_list=seq_list[1:]\n",
+    "len(new_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "9a3b84f5",
+   "execution_count": 150,
+   "id": "a72fb7cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gbk_seq['sequence']=new_list\n",
+    "df_gbk_seq['start']=start_list\n",
+    "df_gbk_seq['end']=end_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "711a91eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       CTAGGATGATAATGTTCTGATTAAGTTAGAAAAATCTTCTTTGATA...\n",
+       "1       TTTAGCATTGGCTTTACGTTCCATAATACTGTTGCCCACCGCATGC...\n",
+       "2       TTACAAGCGCATCGGCATAACAACATAAGCTGCGGCTGCACTTGCC...\n",
+       "3       CTATGGTTTAACCTCTATTTTGCCATGTTCTACGCTAAATAGCCTG...\n",
+       "4       TTAGATATCGATATTTTCTGCTTTTAGTGCATTCTCTTCGATAAAG...\n",
+       "                              ...                        \n",
+       "3790    ATGATCATAATTAATGCCTATCAACTCAGTGTGCATCTAAAAGATG...\n",
+       "3791    ATGCATAGCACTGATACTATCGTCGCTCAGGCCACACCTCCTGGAA...\n",
+       "3792    ATGGATTCGCAACGCAATCTTCTATTCATCGCTTTACTGTTCGTTT...\n",
+       "3793    TTGTTAACTCCCAAGCATTTCAATTTTGTTTTCCAGCAGCCACAGC...\n",
+       "3794    ATGAAACGCACTTTTCAACCGTCTGTACTGAAGCGCAACCGTAACC...\n",
+       "Name: sequence, Length: 3795, dtype: object"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gbk_seq['sequence']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "1f83b8f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,len(new_list)):\n",
+    "    new_list[i]=str(new_list[i]) #make all seq into strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "d756601e",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1222,7 @@
        " ...]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a67008f",
+   "id": "261acb36",
    "metadata": {},
    "source": [
     "Let's define a function that separates out the CDS features from the rest (misc_RNA, tRNA,...)."
@@ -1172,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f052f5ae",
+   "id": "d5373b16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "2f32de32",
+   "id": "829fb853",
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6b9f74",
+   "id": "9c42a38b",
    "metadata": {},
    "source": [
     "This shows that there are 3617 out of 3796 features that are CDS features."
@@ -2225,7 +2295,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e52007ff",
+   "id": "bdf7843e",
    "metadata": {},
    "outputs": [
     {
@@ -2245,7 +2315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844b7cac",
+   "id": "0d100969",
    "metadata": {},
    "source": [
     "Now let's check the varian analysis table from DNA star to identify where the mutations occur in the sequence."
@@ -2254,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7b6bb711",
+   "id": "be5e7124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2263,8 +2333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "ed0de40e",
+   "execution_count": 78,
+   "id": "dffc715b",
    "metadata": {},
    "outputs": [
     {
@@ -2302,7 +2372,7 @@
        "Name: Ref Pos, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2314,10 +2384,142 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ad1821",
+   "id": "9bd1f783",
    "metadata": {},
    "source": [
-    "Now we want to check which CDS features (or intergenic regions) have these mutations. "
+    "I want to check that the reference position from DNAstar matches the position of the sequence given by GenBank."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "f51e8672",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_base_gbk=[]\n",
+    "for i in range(0,len(mutation_position)):\n",
+    "    base=gb_record.seq[mutation_position[i]-1]\n",
+    "    ref_base_gbk.append(base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "0d21aaa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_base_star=df_variants['Ref Base']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "22990270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n",
+      "The base matches!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,len(ref_base_gbk)):\n",
+    "    if ref_base_star[i]==ref_base_gbk[i]:\n",
+    "        print('The base matches!')\n",
+    "    else:\n",
+    "        print(':(')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1f68f36",
+   "metadata": {},
+   "source": [
+    "Thus, for all variants, the reference base matches, meaning that we can move on and our indexing is correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b8ac49c",
+   "metadata": {},
+   "source": [
+    "Now we want to check which CDS features (or intergenic regions) have these mutations. First, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "6e8ef7ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seq('T')"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gb_record.seq[(mutation_position[0]-1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e70290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gb_record.seq[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e2717b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,len(mutation_position)):\n",
+    "    seq_position=gb_record.seq[(mutation_position[i]-1)]\n",
+    "    if "
    ]
   }
  ],
